# website2app

./: .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  build_history.json  docker-compose.yml  pyproject.toml  requirements.txt
assets/template/: AndroidManifest.xml  MainActivity.java  build.gradle
assets/template_ios/WebApp/: ContentView.swift  Info.plist  WebAppApp.swift
assets/template_ios/WebApp.xcodeproj/: project.pbxproj
builder/: downloader.py  engine.py  generator.py  generator_ios.py  project_manager.py
gui/: main_window.py  styles.qss  widgets.py
